--- a/UniTester/public/views/workspace/student.pug
+++ b/UniTester/public/views/workspace/student.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.studentWorkspace}
+	title #{$msgs$.sitename} - #{$msgs$.studentWorkspace} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
