--- a/UniTester/public/stylesheets/style.css
+++ b/UniTester/public/stylesheets/style.css
@@ -22,7 +22,7 @@ body {
 	text-align: center;
 }
 
-.menuItem:not (:hover ) >.menu>.menuItem {
+.menuItem:not (:hover ) > .menu>.menuItem {
 	display: none;
 }
 
@@ -34,4 +34,23 @@ table.tableInTd {
 	width: 100%;
 	border-spacing: 0;
 	position: relative;
+}
+
+.tooltipped::after {
+	background: rgba(0, 0, 0, 0.8);
+	border-radius: 8px 8px 8px 0px;
+	box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+	color: #FFF;
+	content: attr(data-tooltip); /* Главная часть кода, определяющая содержимое всплывающей подсказки */
+	margin-top: -24px;
+	opacity: 0; /* Наш элемент прозрачен... */
+	padding: 3px 7px;
+	position: absolute;
+	visibility: hidden; /* ...и скрыт. */
+	transition: all 0.4s ease-in-out; /* Добавить плавности по вкусу */
+}
+
+.tooltipped:hover::after {
+	opacity: 1; /* Показываем его */
+	visibility: visible;
 }
