--- a/UniTester/public/views/accounts/management/changepassword.pug
+++ b/UniTester/public/views/accounts/management/changepassword.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.passwordChanging}
+	title #{$msgs$.sitename} - #{$msgs$.passwordChanging} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
