--- a/UniTester/public/views/menues.pug
+++ b/UniTester/public/views/menues.pug
@@ -1,7 +1,7 @@
-- function createMenues(menuItems) { for(var v in menuItems)
-	ul.menu
-		li.menuItem
-			a(href=menuItems[v].href) #{menuItems[v].text}
-			- if(menuItems[v].menuItems) createMenues(menuItems[v].menuItems)
-- }
+- function createMenues(menuItems)
+	- for(var v in menuItems)
+		ul.menu(style="position: relative; left: 50px;")
+			li.menuItem
+				a(href=menuItems[v].href) #{menuItems[v].text}
+				- if(menuItems[v].menuItems) createMenues(menuItems[v].menuItems)
 - createMenues(data.menues)
