--- a/UniTester/public/views/workspace.pug
+++ b/UniTester/public/views/workspace.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.workspaceSelect}
+	title #{$msgs$.workspaceSelect} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
