--- a/UniTester/public/views/workspace/teacher.pug
+++ b/UniTester/public/views/workspace/teacher.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.teacherWorkspace}
+	title #{$msgs$.sitename} - #{$msgs$.teacherWorkspace} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
