--- a/UniTester/public/views/workspace/utils/subjects/chemistry.pug
+++ b/UniTester/public/views/workspace/utils/subjects/chemistry.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.chemistryUtils}
+	title #{$msgs$.sitename} - #{$msgs$.chemistryUtils} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
