--- a/UniTester/public/views/workspace/utils/subjects/chemistry/elementInfo.pug
+++ b/UniTester/public/views/workspace/utils/subjects/chemistry/elementInfo.pug
@@ -1,7 +1,7 @@
 extends /headered
 
 block title
-	title #{$msgs$.sitename} - #{$msgs$.elementInfo}
+	title #{$msgs$.sitename} - #{$msgs$.elementInfo} - #{$msgs$.sitename}
 
 block inHead0
 	link(rel='stylesheet', href='/stylesheets/style2.css')
